--- a/app0514/res/history.txt
+++ b/app0514/res/history.txt
@@ -1,13 +1,1 @@
-생몰 연대는 정확하지 않지만, 맹자는 공자가 죽고서 100년쯤 뒤 산둥성 쩌우청에서 태어났다. 
-그가 활약한 시기는 대체로 기원전 4세기 전반기다. 어머니 장(仉)씨는 맹자를 훌륭하게 키우기 
-위해 세 번 이사를 했다는 맹모삼천지교(孟母三遷之敎)로 유명한 현모로서, 어머니에게도 큰 감화를 
-받으며 학교의 수업을 마친 뒤, 공자의 고향인 노나라로 가서 공자의 손자인 자사의 문인에게서 공자가 
-편찬한 육경을 배웠다. 자사의 계통은 공자의 경우에는 별로 드러나지 않았던 '천(天)'의 신앙을 발전시키고
- 있었다.
-
-제자백가 시대에 돌입한 당대에 묵자와 양주의 사상과 경쟁하며 유가 사상을 확립했다. 40세 이후에 
-인정(仁政)과 왕도정치를 주창하며 천하를 유력했다. 법가나 종횡가가 득세하는 세상과 타협하지 않았으며 
-은퇴했다. 60세 이후의 삶은 알려진 바가 없다.
-
-한때 제나라에 체류했을 당시 그 인접국인 연나라에서 자지가 난을 일으킨 것을 제 선왕에게 보고하여
- 자지의 난을 진압하게 한 적도 있었다.
+생몰연대는java
